# NeuronAnnotation

./: .gitignore  CMakeLists.txt
include/: Camera.hpp  Image.hpp  MouseKeyEvent.hpp  TransferFunction.hpp  VolumeRenderer.hpp
src/: CMakeLists.txt
src/Algorithm/: AutoPathFind.hpp
src/Common/: boundingbox.hpp  help_cuda.hpp  utils.hpp  wgl_wrap.hpp
src/Data/: AnnotationDS.hpp
src/Render/: BlockVolumeRenderer.cpp  BlockVolumeRenderer.hpp  CMakeLists.txt  IRenderer.hpp  Image.cpp  ShaderProgram.hpp  Shaders.hpp  Shaders.hpp.in
src/Render/BlockData/: BlockVolumeManager.cpp  BlockVolumeManager.hpp
src/Render/Data/: BlockVolumeManager.cpp  BlockVolumeManager.hpp
src/Render/Shaders/: block_raycast_f.glsl
src/Server/: CMakeLists.txt  Image.cpp  MyHTTPRequestHandler.cpp  MyHTTPRequestHandler.hpp  NeuronAnnotaterApplication.cpp  NeuronAnnotaterApplication.hpp  RequestHandlerFactory.cpp  RequestHandlerFactory.hpp  VolumeRenderer.cpp  WebSocketRequestHandler.cpp  WebSocketRequestHandler.hpp  main.cpp
test/: CMakeLists.txt  pick_f.glsl  pick_v.glsl  test_pick.cpp  test_simple_server.cpp  test_thread_pool.cpp
web/: .gitignore  package-lock.json  package.json
web/public/: index.html
web/src/: App.tsx  FirstPersonController.ts  InteractiveImage.tsx  PointerLockControls.js  index.tsx  style.css
web/src/math/: Math.js  Quaternion.js  Vector2.js  Vector3.js  misc.js
